[gd_scene load_steps=4 format=3 uid="uid://do1mh8varxv6q"]

[ext_resource type="Script" path="res://addons/enhanced_input/scripts/axis_data_option.gd" id="1_ck3h1"]
[ext_resource type="PackedScene" uid="uid://d1ds65i3kt0qb" path="res://addons/variable_resource_types/scenes/range_float_option.tscn" id="2_u4gr0"]
[ext_resource type="PackedScene" uid="uid://cihlmra6al7ce" path="res://addons/variable_resource_types/scenes/bool_option.tscn" id="3_fm6ak"]

[node name="AxisDataOption" type="HBoxContainer"]
auto_translate_mode = 1
script = ExtResource("1_ck3h1")

[node name="AxisNameLabel" type="Label" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "Axis name"

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
auto_translate_mode = 1
layout_mode = 2

[node name="SensitivityOption" parent="VBoxContainer" instance=ExtResource("2_u4gr0")]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
label_text = "Sensitivity"
min_value = 0.1
max_value = 4.0

[node name="IsInvertedOption" parent="VBoxContainer" instance=ExtResource("3_fm6ak")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Is inverted"
